app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 @import url('https://fonts.googleapis.com/css2?family=League+Gothic&display=swap');

 html {
     text-align: center;
     background-color: #FAFAFA;
 }

 #location {
     font-weight: bold;
 }

.time, .showtimeTitle, .showtimeMovieName {
    color: royalblue;
}

.showtimeTitle {
    font-weight: bolder;
}

 #splash-logo {
    font-weight: 900;
    font-family: 'League Gothic', sans-serif;
    font-size: 5em;
    background: gold;
    padding: .2em;
    color: #101;
    position: absolute;
    left: 3em;
    margin:0em;
    padding-top: 0em;
    font-size: 3em;
 }

 h2 {
     font-weight: bold;
     font-size: 2em;
     margin: .6em;
 }

 h3 {
     margin: 2em;
 }

 .label {
     font-weight: bold;
     margin: 1em;
 }

 .signin-link {
    position: absolute;
    right: 0em;
    top: 0em;
    color: #FAFAFA;
    font-weight: bold;
    background: #10111E;
    padding: 1em;
    height: 1em;
    width: 5em;
    text-align: center;
 }

 .showtimes-link {
    padding-top: 1em;
 }

 #title {
    padding-top: 5em;
    display: flex;
    left: 3em;
    margin-left: 7.7em;
 }

 #release_date {
    display: flex;
    align-items: left;
    padding: 0em;
    margin: 0em;
    margin-left: 6.8em;
 }

  #genre {
    display: flex;
    align-items: left;
    padding: 0em;
    margin: 0em;
    left: 3em;
    margin-left: 6.8em;
 }

  #description {
    display: flex;
    margin-left: 6.2em;
    margin-right: 30em;
 }

 #movie_image > img {
     display: flex;
     align-items: left;
     width: 30%;
     margin: 0.5em;
     padding-top: 0em;
     padding-left: .5em;
     margin-left: 8em;
 }

 #reviews {
     background-color: #FAFAFA;
     color: #010101;
 }

 #reviews > h2 {
    position: absolute;
    left: 3.5em;
 }

 #zipBox {
    padding-top: 1em;
 }

 #location {
    padding-top: 3em;
    font-weight: bolder;
    font-size: 1.5em;
 }

 #showtimeInfo {
     margin-top: 1em;
     color: #505050;
     padding-bottom: 5em;
 }

 #zipForm {
     align-items: left;
     padding-right: 1em;
     padding-top: 2em;
     white-space: nowrap;
     font-weight: lighter;
     color: #505050;
 }

 #reviews > h1 {
     font-weight: bold;
     font-size: 2em;
     margin: 2em;
     padding: 2em;
 }

 #reviews > div {
    padding: 3em;
    margin: 3em;
    text-align: left;
 }

 .splash {
     background-color: #010101;
     min-height: 100%;
 }

 .movie {
     background-color: #202020;
     color: #FAFAFA;
     
 }

 button {
     background: gold;
     margin: 1em;
     width: 10em;
 }

 label {
    display: inline-block;
    width: 10em;
    text-align: left;
 }

 a, a:visited, a:hover {
    text-decoration: none;
    color: #FAFAFA;
 }

 /* img {
    margin: 5em;
    width: 90%;
    height: 10%;
 } */

 .session-form {
     border-style: ridge;
     border-width: 1px;
     margin: 1em;
     display: inline-flexbox;
     white-space: pre-line;
     font-weight: bolder;
     text-align: center;
 }

 #signup > a, #login > a {
     color: #010101;
 }

 .movie_image > a > img {
     display: flex;
     align-items: left;
     max-width: 50%;
     max-height: 50%;
     width: auto;
     height: auto;
     padding-top: 5em;
     padding-left: .5em;
     margin-left: 8em;
 }

